[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/MultiplayerDemo/MultiplayerDemo.gd" type="Script" id=1]
[ext_resource path="res://src/MultiplayerDemo/LoadProfile.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/HyperGateway/HyperGateway.gd" type="Script" id=3]

[node name="MultiplayerDemo" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -617.0
margin_bottom = -652.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadProfile" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 49.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
spawn_gateway = false

[node name="HyperGateway" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="profile_ready" from="LoadProfile" to="." method="_on_LoadProfile_profile_ready"]
[connection signal="started_gateway" from="HyperGateway" to="." method="_on_HyperGateway_started_gateway"]
